--- a/laba48.html
+++ b/laba48.html
@@ -24,7 +24,7 @@
         'tiger',
         'hare',
         'dragon',
-        'change',
+        'snake',
         'horse',
         'sheep',
         'monkey',
