--- a/laba48.html
+++ b/laba48.html
@@ -16,7 +16,7 @@
         number => (number > 24) ? 'terezy' : 'diva',
         number => (number > 24) ? 'skorpion' : 'terezy',
         number => (number > 23) ? 'strilec' : 'skorpion',
-        number => (number > 22) ? 'kozerig' : 'strilec',
+        number => (number > 22) ? 'kozeri4g' : 'strilec',
       ];
       const animal = [
         'rat',
